# AudioPlayer

./: .gitignore  CMakeLists.txt  MainPage.xcf  README.md  procentovka_2.docx  procentovka_3.docx  something.puml
Program_templates/: PantusVisioRamka.vsdx
build-src-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  src  src.REMOVED.git-id
build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-834b831f97f2e4e64804.json  cache-v2-92302f652cac1e7125d7.json  cache-v2-9cf4a578e34d9d4dabe2.json  cache-v2-e79a39ae1c986c49253a.json  cmakeFiles-v1-0f0d2b4afa4f061b5593.json  cmakeFiles-v1-27c55b7d2ee45af1f75a.json  cmakeFiles-v1-2e89a1f911156b12f1a1.json  cmakeFiles-v1-46e76ef105e41f6c9071.json  cmakeFiles-v1-7e692ae88e9c97161a3a.json  codemodel-v2-157dd4e7f734c649cf42.json  codemodel-v2-25f64db90889e85c1a51.json  codemodel-v2-39a5a41250d79bb96b43.json  (+39 more)
build-src-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-9b4c348ca229432ac317.json  cache-v2-d2bf0802d9740065f134.json  cache-v2-eeff6a988e7c6089d351.json  cmakeFiles-v1-05351cddb55117745521.json  cmakeFiles-v1-284b90d74f7e06ad5691.json  cmakeFiles-v1-eaefecdec9a8b416e3de.json  codemodel-v2-1bd5e9cd4e61e73f4f91.json  codemodel-v2-449e9afacaea3bf79b43.json  codemodel-v2-5044328847df0ada91c8.json  codemodel-v2-5b4d6b6103503ce76b2e.json  codemodel-v2-660fd0c12cd7315aa985.json  codemodel-v2-86a9f856f7ab9af413e5.json  codemodel-v2-9a11377e1e569024892e.json  codemodel-v2-9ea632150348df36ebbf.json  codemodel-v2-d457dee8bfacd4301e1b.json  codemodel-v2-dfd1a2603bba95986d79.json  directory-.-Debug-133111b3f776eb43cf94.json  directory-.-Debug-552600379cc4c63fdb41.json  directory-.-Debug-6261e7e15b5aedff3887.json  directory-.-Debug-726ad59c0a89fdb15bda.json  directory-.-Debug-7ec6a8c39c0349894336.json  directory-.-Debug-87060ac3069f63cc8710.json  directory-.-Debug-dcfd644c81148d43047b.json  directory-.-Debug-ed39703dbee086eb649f.json  index-2022-11-04T08-01-38-0167.json  index-2022-11-04T09-15-43-0643.json  index-2022-11-08T12-35-25-0860.json  index-2022-12-05T10-47-33-0763.json  index-2022-12-05T17-43-54-0234.json  index-2022-12-06T19-40-04-0701.json  index-2022-12-09T07-40-25-0863.json  index-2022-12-09T17-46-27-0163.json  index-2022-12-10T13-24-45-0716.json  index-2022-12-19T16-33-00-0524.json  target-src-Debug-115976b278939778151a.json  target-src-Debug-2155123f93c2edca36ed.json  target-src-Debug-4bc7add2f1453301d2f4.json  target-src-Debug-8944e72bb2696117dda0.json  target-src-Debug-8b986be163e9da731e67.json  target-src-Debug-8bf2a3c997460dd77fdb.json  (+6 more)
build-src-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-src-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop-Debug/saved-tracks/: ######################################www#lightaudio#ru##mp3.REMOVED.git-id  Beethoven-MoonlightSonata.mp3.REMOVED.git-id  I Need A Dollar.mp3.REMOVED.git-id  IVOXYGEN — SPACED OUT (www.lightaudio.ru).mp3.REMOVED.git-id  Ludovico_Einaudi_-_Time_Lapse_(musportal.org).mp3.REMOVED.git-id  Ludovico_Einaudi_Daniel_Hope_I_Virtuosi_Italiani_-_Experience_(musportal.org).mp3.REMOVED.git-id  Seatbelts#####Cats#on#Mars##www#lightaudio#ru##mp3.REMOVED.git-id  aloe-blacc-believe.mp3.REMOVED.git-id  aloe-blacc-crft-feat_-betty-michaels-crazy.mp3.REMOVED.git-id  aloe-blacc-feat_-maui-prime-clappin.mp3.REMOVED.git-id  aloe-blacc-free.mp3.REMOVED.git-id  aloe-blacc-green-lights.mp3.REMOVED.git-id  aloe-blacc-hey-brother.mp3.REMOVED.git-id  aloe-blacc-leann-rimes-i-do.mp3.REMOVED.git-id  aloe-blacc-loving-you-is-killing-me.mp3.REMOVED.git-id  avicii-feat_-aloe-blacc-sos.mp3.REMOVED.git-id  big-gigantic-feat_-aloe-blacc-keep-on-rising.mp3.REMOVED.git-id  dark_night.mp3.REMOVED.git-id  gabry-ponte-feat_-aloe-blacc-cant-get-over-you.mp3.REMOVED.git-id  hunter.mp3.REMOVED.git-id  josh-one-feat_-demetrius-rhymes-aloe-blacc-sacrifice-adddddeeed.mp3.REMOVED.git-id  ludovico_einaudi_-_run_#z2.fm#.mp3.REMOVED.git-id  mesto-feat_-aloe-blacc-better-days.mp3.REMOVED.git-id  prolly my spookiest beat (sped up).mp3.REMOVED.git-id
build-src-Desktop-Debug/serv_part_files/: Freddie_Dredd_-_WTH.mp3.REMOVED.git-id
build-src-Desktop-Debug/src_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop-Debug/src_autogen/EWIEGA46WW/: moc_communicatewithserver.cpp  moc_dialog.cpp  moc_loginwindow.cpp  moc_main_menu_window.cpp  moc_mainmenu.cpp  moc_mainpage.cpp  moc_mainsss.cpp  moc_mainwindow.cpp  moc_signupwindow.cpp  moc_startwindow.cpp  qrc_resources.cpp
build-src-Desktop-Debug/src_autogen/JNUFCZMWDL/: qrc_resourses.cpp
build-src-Desktop-Debug/src_autogen/JPFYYQWDSP/: moc_ensuremessagebox.cpp  moc_slotscommunicationhandler.cpp
build-src-Desktop-Debug/src_autogen/OIBSYM6ORI/: qrc_resourses.cpp  qrc_resourses.cpp.REMOVED.git-id
build-src-Desktop-Debug/src_autogen/include/: ui_dialog.h  ui_ensuremessagebox.h  ui_loginwindow.h  ui_main_menu_window.h  ui_mainmenu.h  ui_mainpage.h  ui_mainsss.h  ui_mainwindow.h  ui_signupwindow.h  ui_startwindow.h
docs/: README.md  audioplyaer.docx  graphical_interface.md  plan.txt  procentovka_2.docx  procentovka_3.docx  state-diagram.vsdx
docs/Program_templates/: FirstDiagram.mwb  procentovka_1.docx
images/: Combinear.qss  resourses.qrc
include/: account.h  communicatewithserver.h  layoutsdeleter.h  mainpage.h  mainwindow.h  signupwindow.h
src/: CMakeLists.txt  account.cpp  communicatewithserver.cpp  communicatewithserver.h  layoutsdeleter.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainmenu.cpp  mainmenu.ui  mainpage.cpp  mainpage.h  mainpage.ui  mainpage_buttons.cpp  mainpage_cp.cpp  mainpage_cp.h  mainpage_cp.ui  mainsss.cpp  mainsss.h  mainsss.ui  mainwindow.h  mainwindow.ui  signupwindow.cpp  signupwindow.h  signupwindow.ui  songplayer.cpp  songplayer.h  startwindow.ui
src/Images/: resourses.qrc
src/checker/: checker.cpp  checker.h  ensuremessagebox.cpp  ensuremessagebox.h  ensuremessagebox.ui
src/view/: loginwindow.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_buttons.cpp
src/view/mainwindow/: mainwindow.cpp  mainwindow_buttons.cpp  mainwindow_init.cpp
(+203 files in other folders)
